lab1/Test/L1-A-9-99.cmm
struct NF0T8 ;
int tqc ( int v56Auo ) {
}
float HKeP1_GwV [ 1321123684 ] 
;
int 
int ;
int ;
int ;
int ipHveCx1n ( int fVbIfy8x , struct {
  struct yG4lkGanaIjA0gn7AIk {
  }gGHEVpyr50sTbxcwJ7 , La = M1PHgSr5gPz ;
}nSKGxqg ) {
  Nj ;
  UKef05XDQR3EF4aH ;
}
int U ( ) {
  if ( hNPiQR4mn8 )   if ( sFcLc4aeKn642 )   n5xVueYCgXTX_AK 
    ;
else   if ( atGWZIpRo54cNoP )   if ( gQGtThLF253_JfL6S 
    )   xYUAMxvy2dek2W5Yy ;
else {
    int xY6O5VG47uqrrgXM ;
  }
else   if ( UgUlYZf )   xqr8sgdP ;




  while ( FAB5tmRC82_oZa )   return LG + _ * RSq63_H3cSHOxQvz 
    ( CDk = KSfdAABb68 || faHS88nBMObj && kb >= t43B7lZtLlISSTsP 
    ! - ! ! - k1gHoOpql [ o != ( bKTmVMGou || y1c <= - 
    - ( dswMS_9z7Xw3 > Qu7 + - IetL8vd13Nu1tf94h ( bCGU16FsBAC 
    , k5MMsgOZv_ , dvJ4K && PzxcPOP < QTo1qsmRLj ) . ttVuI 
    ) * ! 251807713 == - 757272573.661756134 ) . l9dpwCsM42t 
    - MeNTQ8dyBfsDLSmZ8Fo5 ( ) - - Tog ] ) ;

}
int ;
int ;
int ;
int bHiyV5 , sibfpP 

;
int ;
int ;
